--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,16 +24,17 @@ jobs:
   test:
 
     runs-on: ubuntu-latest
-
-      - uses: actions/upload-artifact@master
     needs: build
-          name: webpack artifacts
-          path: public/
+    strategy:
       matrix:
         os: [ubuntu-latest, windows-2016]
         node-version: [12.x, 14.x]
 
     steps:
+    - uses: actions/upload-artifact@master
+      with:
+        name: build artifact  
+        path: public/
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
