--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,6 +20,10 @@ jobs:
         run: |
           npm install
           npm run build
+      - uses: actions/upload-artifact@master
+        with:
+          name: build artifact  
+          path: public/
 
   test:
 
@@ -31,7 +35,7 @@ jobs:
         node-version: [12.x, 14.x]
 
     steps:
-    - uses: actions/upload-artifact@master
+    - uses: actions/download-artifact@master
       with:
         name: build artifact  
         path: public/
